src/objects/sked_Roster_Management_Filter__c.object
<CustomObject>
    <fields>
        <fullName>sked_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Roster Management Filters</relationshipLabel>
        <relationshipName>sked_Roster_Management_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Job_Status__c</fullName>
        <label>Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Job_Type__c</fullName>
        <label>Job Type</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>sked__Location__c</referenceTo>
        <relationshipLabel>Roster Management Filters</relationshipLabel>
        <relationshipName>Roster_Management_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Period__c</fullName>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>sked__Region__c</referenceTo>
        <relationshipLabel>Roster Management Filters</relationshipLabel>
        <relationshipName>sked_Roster_Management_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Roster Management Filters</relationshipLabel>
        <relationshipName>sked_Roster_Management_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sked_Roster_Management_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked_Views__c</fullName>
        <label>Views</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Roster Management Filter</label>
    <nameField>
        <label>Roster Management Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roster Management Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>